Changes in v1.2

+ CHANGELOG introduced
+ Fr-Sky support v1.0 merged into trunk
+ ER's better fonts introduced (with slashes removed from zeroes)
+ Issue 9: Bug in PPM_IN capture values fixed
+ Some minor tweaks in display format of times
+ Resurrected the old sub-version auto-counter in the form of a "build number"
